--- a/home.html
+++ b/home.html
@@ -156,8 +156,8 @@
 
         <div class="row text-center text-lg-left pt-lg-5 d-sm-flex">
             <div class="col-md">
-                <div class="card bg-transparent border-0 text-light p-5 ">
-                    <div class="card-body text-sm-center text-lg-left pb-0 ">
+                <div class="card bg-transparent border-0 text-light p-3 ">
+                    <div class="card-body text-sm-center text-lg-left pb-3 ">
                         <h3 class="card-text">
                             01 MUSIC </h3>
                         <p class="card-text">
@@ -169,8 +169,8 @@
             </div>
 
             <div class="col-md">
-                <div class="card bg-transparent border-0 text-light p-5">
-                    <div class="card-body text-sm-center text-lg-left pb-0">
+                <div class="card bg-transparent border-0 text-light pb-3">
+                    <div class="card-body text-sm-center text-lg-left pb-3">
                         <h3 class="card-text">
                             02 music
                         </h3>
@@ -183,8 +183,8 @@
             </div>
 
             <div class="col-md">
-                <div class="card bg-transparent border-0 text-light p-5">
-                    <div class="card-body text-sm-center text-lg-left pb-0">
+                <div class="card bg-transparent border-0 text-light pb-3">
+                    <div class="card-body text-sm-center text-lg-left pb-3">
                         <h3 class="card-text">
                             03 music
                         </h3>
