--- a/home.html
+++ b/home.html
@@ -156,7 +156,7 @@
 
         <div class="row text-center text-lg-left pt-lg-5 d-sm-flex">
             <div class="col-md">
-                <div class="card bg-transparent border-0 text-light p-3 ">
+                <div class="card bg-transparent border-0 text-light p-lg-5 ">
                     <div class="card-body text-sm-center text-lg-left pb-3 ">
                         <h3 class="card-text">
                             01 MUSIC </h3>
@@ -169,7 +169,7 @@
             </div>
 
             <div class="col-md">
-                <div class="card bg-transparent border-0 text-light pb-3">
+                <div class="card bg-transparent border-0 text-light p-lg-5">
                     <div class="card-body text-sm-center text-lg-left pb-3">
                         <h3 class="card-text">
                             02 music
@@ -183,7 +183,7 @@
             </div>
 
             <div class="col-md">
-                <div class="card bg-transparent border-0 text-light pb-3">
+                <div class="card bg-transparent border-0 text-light p-lg-5">
                     <div class="card-body text-sm-center text-lg-left pb-3">
                         <h3 class="card-text">
                             03 music
