--- a/home.html
+++ b/home.html
@@ -75,59 +75,27 @@
     <!-- end of navbar -->
 
     <!-- carousel start -->
-    <section class="text-center" id="carousel1">
-
-        <div id="carouselmain" class="carousel slide text-center" data-ride="carousel">
-            <ol class="carousel-indicators">
-                <li data-target="#carouselmain" data-slide-to="0" class="active"></li>
-                <li data-target="#carouselmain" data-slide-to="1"></li>
-                <li data-target="#carouselmain" data-slide-to="2"></li>
-            </ol>
-            <div class="carousel-inner pb-3">
-                <div class="carousel-item active" data-interval="1">
-                    <div class="overlay-image">
-                        <div class="container">
-                            <h2 class="h2top display-4 text-center text-white">SIP IN STYLE:
-                                <span class="text-primary">A BAR FOR THE DISCERNING PALATE</span>
-                            </h2>
-                            <p class="paratop mr-5 ml-5">"The Perfect Pour: Where Quality Drinks Meet Great Company"
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <div class="overlay-image" id="over2">
-                        <div class="container">
-                            <h2 class="h2top display-4 text-center text-white">SIP IN STYLE:
-                                <span class="text-primary">A BAR FOR THE DISCERNING PALATE</span>
-                            </h2>
-                            <p class="paratop mr-5 ml-5">"The Perfect Pour: Where Quality Drinks Meet Great Company"
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <div class="overlay-image" id="over3">
-                        <div class="container">
-                            <h2 class="h2top display-4 text-center text-white">SIP IN STYLE:
-                                <span class="text-primary">A BAR FOR THE DISCERNING PALATE</span>
-                            </h2>
-                            <p class="paratop mr-5 ml-5">"The Perfect Pour: Where Quality Drinks Meet Great Company"
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <a class="carousel-control-prev" href="#carouselmain" role="button" data-slide="prev">
-                <span class="carousel-control-prev-icon text-primary" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselmain" role="button" data-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-            </a>
+    <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="image/banner-img-1.jpg" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="image/banner-img-2.jpg" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="image/black-car-interior.jpg" class="d-block w-100" alt="...">
+          </div>
         </div>
-    </section>
+        <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
 
     <!-- carousel end -->
 
@@ -281,7 +249,7 @@
                     <button class="btn btn-primary btn-lg text-center text-lg-left">Start The Enrollment
                     </button>
                 </div>
-                <img class="img-fluid w-50 d-sm-block" src="image/wash-machine.png" alt="">
+                <img class="img-fluid w-50 d-sm-block" src="image/wash-machine.png`" alt="">
             </div>
         </div>
     </section>
