--- a/home.html
+++ b/home.html
@@ -75,27 +75,40 @@
     <!-- end of navbar -->
 
     <!-- carousel start -->
-    <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
+    <section class="carouselmain">
+    <div id="carouselFade" class="carousel slide carousel-fade" data-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img src="image/banner-img-1.jpg" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-block d-md-block">
+                <h5 class="text-primary">First slide label</h5>
+                <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+              </div>
           </div>
           <div class="carousel-item">
             <img src="image/banner-img-2.jpg" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-block d-md-block">
+                <h5 class="text-primary">First slide label</h5>
+                <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+              </div>
           </div>
           <div class="carousel-item">
             <img src="image/black-car-interior.jpg" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-block d-md-block">
+                <h5 class="text-primary">First slide label</h5>
+                <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+              </div>
           </div>
         </div>
-        <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
+        <a class="carousel-control-prev" href="#carouselFade" role="button" data-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
           <span class="sr-only">Previous</span>
         </a>
-        <a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next">
+        <a class="carousel-control-next" href="#carouselFade" role="button" data-slide="next">
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="sr-only">Next</span>
         </a>
-      </div>
+      </div></section>
 
     <!-- carousel end -->
 
