--- a/home.html
+++ b/home.html
@@ -18,7 +18,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@700&family=Poppins:wght@300;400&display=swap"
         rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@700&family=Poppins:wght@300;400&display=swap"
         rel="stylesheet">
     <!-- Custom CSS -->
@@ -42,7 +42,7 @@
                         <a class="nav-link text-warning" href="#">Home <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item pt-lg-5">
-                        <a class="nav-link text-warning" href="#">Features</a>
+                        <a class="nav-link text-warning" href="file:///C:/Users/user/Desktop/bemarkz/Contact.html">Contact</a>
                     </li>
                     <li class="nav-item pt-lg-5">
                         <a class="nav-link text-warning" href="#">Features</a>
