--- a/Contact.html
+++ b/Contact.html
@@ -31,6 +31,89 @@
     
 
 
+<!-- navbar section -->
+
+<nav class="navbar navbar-expand-lg navbar-dark text-center d-flex">
+    <div class="container " id="navtop">
+        <button class="navbar-toggler  btn-primary" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item active pt-lg-5">
+                    <a class="nav-link text-warning" href="#">Home <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item pt-lg-5">
+                    <a class="nav-link text-warning" href="file:///C:/Users/user/Desktop/bemarkz/Contact.html">Contact</a>
+                </li>
+                <li class="nav-item pt-lg-5">
+                    <a class="nav-link text-warning" href="#">Features</a>
+                </li>
+                <li class="nav-item pt-lg-5">
+                    <a class="nav-link text-warning" href="#">Features</a>
+                </li>
+                <a class="navbar-brand d-sm-block d-sm-none" href="#">
+                    <img src="image/logo.png" width="250" height="200" alt="logo" loading="lazy">
+                </a>
+                <li class="nav-item pt-lg-5">
+                    <a class="nav-link text-warning" href="#">Pricing</a>
+                </li>
+                <li class="nav-item pt-lg-5">
+                    <a class="nav-link text-warning" href="#">Store</a>
+                </li>
+                <li class="nav-item pt-lg-5">
+                    <a class="nav-link text-warning" href="#">Store</a>
+                </li>
+                <li class="nav-item pt-lg-5">
+                    <a class="nav-link text-warning" href="#">Store</a>
+                </li>
+            </ul>
+        </div>
+</nav>
+
+
+
+
+<!-- end of navbar -->
+
+<!-- carousel start -->
+<section class="carouselmain">
+<div id="carouselFade" class="carousel slide carousel-fade" data-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="image/banner-img-1.jpg" class="d-block w-100" alt="...">
+        <div class="carousel-caption d-block d-md-block">
+            <h5 class="text-primary">First slide label</h5>
+            <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+          </div>
+      </div>
+      <div class="carousel-item">
+        <img src="image/banner-img-2.jpg" class="d-block w-100" alt="...">
+        <div class="carousel-caption d-block d-md-block">
+            <h5 class="text-primary">First slide label</h5>
+            <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+          </div>
+      </div>
+      <div class="carousel-item">
+        <img src="image/black-car-interior.jpg" class="d-block w-100" alt="...">
+        <div class="carousel-caption d-block d-md-block">
+            <h5 class="text-primary">First slide label</h5>
+            <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+          </div>
+      </div>
+    </div>
+    <a class="carousel-control-prev" href="#carouselFade" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselFade" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div></section>
+
+<!-- carousel end -->
 
 
 
@@ -38,5 +121,4 @@
 
 
 
-    
 </body>
