--- a/home.html
+++ b/home.html
@@ -39,31 +39,19 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item active pt-lg-5">
-                        <a class="nav-link text-warning" href="#">Home <span class="sr-only">(current)</span></a>
+                        <a class="nav-link text-warning" href="file:///C:/Users/user/Desktop/bemarkz/home.html">Home <span class="sr-only">(current)</span></a>
                     </li>
+                    <li class="nav-item pt-lg-5">
+                        <a class="nav-link text-warning" href="file:///C:/Users/user/Desktop/bemarkz/Services.html">Services</a>
+                    </li>                    
+                    <a class="navbar-brand d-sm-block d-sm-none" href="#">
+                        <img src="image/logo.png" width="250" height="200" alt="logo" loading="lazy">
+                    </a>                                                            
                     <li class="nav-item pt-lg-5">
                         <a class="nav-link text-warning" href="file:///C:/Users/user/Desktop/bemarkz/Contact.html">Contact</a>
                     </li>
                     <li class="nav-item pt-lg-5">
-                        <a class="nav-link text-warning" href="#">Features</a>
-                    </li>
-                    <li class="nav-item pt-lg-5">
-                        <a class="nav-link text-warning" href="#">Features</a>
-                    </li>
-                    <a class="navbar-brand d-sm-block d-sm-none" href="#">
-                        <img src="image/logo.png" width="250" height="200" alt="logo" loading="lazy">
-                    </a>
-                    <li class="nav-item pt-lg-5">
-                        <a class="nav-link text-warning" href="#">Pricing</a>
-                    </li>
-                    <li class="nav-item pt-lg-5">
-                        <a class="nav-link text-warning" href="#">Store</a>
-                    </li>
-                    <li class="nav-item pt-lg-5">
-                        <a class="nav-link text-warning" href="#">Store</a>
-                    </li>
-                    <li class="nav-item pt-lg-5">
-                        <a class="nav-link text-warning" href="#">Store</a>
+                        <a class="nav-link text-warning" href="file:///C:/Users/user/Desktop/bemarkz/About.html">About</a>
                     </li>
                 </ul>
             </div>
