--- a/Services.html
+++ b/Services.html
@@ -33,7 +33,7 @@
 
 <!-- navbar section -->
 
-<nav class="navbar navbar-expand-lg navbar-dark text-center d-flex">
+<<nav class="navbar navbar-expand-lg navbar-dark text-center d-flex">
     <div class="container " id="navtop">
         <button class="navbar-toggler  btn-primary" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -60,9 +60,7 @@
          </div>
 </nav>
 
-
-
-<!-- end of navbar -->
+<!-- end of navbar --> 
 
 
 
