--- a/About.html
+++ b/About.html
@@ -62,6 +62,7 @@
 
 <!-- end of navbar -->
 
+<!-- about section -->
 
 <section class="text-light p-5 p-lg-0 pt-lg-5 text-center text-lg-left " id="sec4">
     <div class="container pt-5">
