--- a/Services.html
+++ b/Services.html
@@ -63,7 +63,75 @@
 <!-- end of navbar --> 
 
 
+<section class="text-light p-5 p-lg-0 pt-lg-5 text-center text-lg-left " id="sec4">
+    <div class="container pt-5">
+        <div class="d-sm-flex d-sm-block">
+            <div>
+                <h2 class="carh2 display-5 text-center text-lg-left ">About <span
+                        class="text-warning">Us</span></h2>
+                <p class="lead my-4 text-center text-lg-left ">Lorem ipsum, dolor sit <br> consectetur
+                    adipisicing elit. Voluptatem illum
+                    nisi
+                    voluptates, <br>hic
+                    illo voluptatibus accusamus, corrupti voluptate libero accusantium incidunt fuga repellat,                    
+                </p>
+                <button class="btn btn-primary btn-lg text-center text-lg-left">Click To Contact Us
+                </button>
+            </div>
+            <img class="img-fluid w-50 d-sm-block" src="image/wash-machine.png`" alt="">
+        </div>
+    </div>
+</section>
 
 
+
+
+<!-- footer -->
+
+<footer class="footer p-5 text-white text-center d-flex">
+    <div class="container">
+        <h2 class="display-6">ADD ANY EXTRA INFORMATION INSIDE THE FOOTER AREA</h2>
+        <a class="navbar-brand d-sm-block d-sm-none" href="#">
+            <img src="image/logo.png" width="250" height="200" alt="logo" loading="lazy">
+        </a>
+        <div class="row g-3">
+            <div class="col-md">
+                <h2 class="text-center mb-1">
+                    Call us
+                </h2>
+                <p>+01 315 0006 565</p>
+            </div>
+            <div class="col-md">
+                <h2 class="text-center mb-1">
+                    Address</h2>
+                <p>Canal View Socity JzStreet La 0005846 </p>
+            </div>
+            <div class="col-md">
+                <h2 class="text-center mb-1">
+                    Email</h2>
+                <p>support@jzpub.com</p>
+            </div>
+        </div><br>
+        <p>Precious Pub © 2023 All Rights Reserved <a href="#">Terms of Use</a> And <a href="http://#">Privacy
+                Policy</a>
+        </p>
+        <ul class="list-inline">
+            <li class="list-inline-item">Facebook</li>
+            <li class="list-inline-item">Twitter</li>
+            <li class="list-inline-item">Instagram</li>
+        </ul>
+</footer>
+
+
+
+<!-- Optional JavaScript -->
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+    crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+    crossorigin="anonymous"></script>
 
 </body>
+
+</html>
