--- a/Contact.html
+++ b/Contact.html
@@ -47,9 +47,9 @@
                 <li class="nav-item pt-lg-5">
                     <a class="nav-link text-warning" href="file:///C:/Users/user/Desktop/bemarkz/Services.html">Services</a>
                 </li>                    
-                <a class="navbar-brand d-sm-block d-sm-none" href="#">
+                <a class="navbar-brand d-sm-block d-sm-none" href="file:///C:/Users/user/Desktop/bemarkz/home.html">
                     <img src="image/logo.png" width="250" height="200" alt="logo" loading="lazy">
-                </a>                                                            
+                </a>                                                           
                 <li class="nav-item pt-lg-5">
                     <a class="nav-link text-warning" href="file:///C:/Users/user/Desktop/bemarkz/Contact.html">Contact</a>
                 </li>
