--- a/About.html
+++ b/About.html
@@ -64,26 +64,99 @@
 
 <!-- about section -->
 
-<section class="text-light p-5 p-lg-0 pt-lg-5 text-center text-lg-left " id="sec4">
-    <div class="container pt-5">
-        <div class="d-sm-flex d-sm-block">
-            <div>
-                <h2 class="carh2 display-5 text-center text-lg-left ">About <span
-                        class="text-warning">Us</span></h2>
-                <p class="lead my-4 text-center text-lg-left ">Lorem ipsum, dolor sit <br> consectetur
-                    adipisicing elit. Voluptatem illum
-                    nisi
-                    voluptates, <br>hic
-                    illo voluptatibus accusamus, corrupti voluptate libero accusantium incidunt fuga repellat,                    
-                </p>
-                <button class="btn btn-primary btn-lg text-center text-lg-left">Click To Contact Us
-                </button>
-            </div>
-            <img class="img-fluid w-50 d-sm-block" src="image/wash-machine.png`" alt="">
-        </div>
-    </div>
-</section>
+<section class="text-light  p-5  pt-lg-5 bg-primary"id="abtsec">
+</div>
+<div class="container text-center text-lg-left  d-sm-flex mt-lg-5">
+    <div>
+        <span class=" text-warning display-4 "><b>About Us</b></span>
+        <h2 class=" display-5">LEARN MORE ABOUT WHO WE ARE
+        </h2>
+        <p class="lead my-4">Beciegast nveriti vitaesaert asety kertya aset
+            aplicaboserde nerorem asipsumod
+            itaut. Monsequntur magni dolores eonqui ratione voluptate msequise kertyias nesciunt, neque
+            porro quisquam seridolore nuyfasas. Vertyu erauas aitaesa ertyasneo eniptaiades.
 
+        </p>
+        <button class="btn btn-warning fw-bold btn-lg">CHECK OUT OUR SERVICES
+        </button>
+    </div>
+    <img class="img-fluid d-sm-flex w-100 mt-4" src="image/about-removebg-preview.png" alt="about">
+</div></section>
+
+<!-- staffs-->
+<section id="" class="instructors p-5 bg-primary">
+    <div class="container">
+        <h2 class="text-center text-white">
+            Meet Our Team
+        </h2>
+        <p class="lead text-center text-white mb-5">
+            Our team have 4 years+ of experience in the industry
+        </p>
+        <div class="row g-4 "id="contactrow">
+            <div class="col-md-6 col-lg-3">
+                <div class="card bg-dark">
+                    <div class="card-body text-center text-light">
+                        <img src="https://randomuser.me/api/portraits/men/11.jpg" class="rounded-circle mb-3"
+                            alt="">
+                        <h3 class="card-title mb-3">John Doe</h3>
+                        <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id,
+                            distinctio!</p>
+                        <a href=""><i class="bi bi-twitter text-light"></i></a>
+                        <a href=""><i class="bi bi-facebook text-light"></i></a>
+                        <a href=""><i class="bi bi-instagram text-light"></i></a>
+                        <a href=""><i class="bi bi-youtube text-light"></i></a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-6 col-lg-3">
+                <div class="card bg-dark">
+                    <div class="card-body text-center text-light">
+                        <img src="https://randomuser.me/api/portraits/women/11.jpg" class="rounded-circle mb-3"
+                            alt="">
+                        <h3 class="card-title mb-3">Jane Doe</h3>
+                        <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id,
+                            distinctio!</p>
+                        <a href=""><i class="bi bi-twitter text-light"></i></a>
+                        <a href=""><i class="bi bi-facebook text-light"></i></a>
+                        <a href=""><i class="bi bi-instagram text-light"></i></a>
+                        <a href=""><i class="bi bi-youtube text-light"></i></a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-6 col-lg-3">
+                <div class="card bg-dark">
+                    <div class="card-body text-center text-light">
+                        <img src="https://randomuser.me/api/portraits/men/12.jpg" class="rounded-circle mb-3"
+                            alt="">
+                        <h3 class="card-title mb-3">John Stevens</h3>
+                        <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id,
+                            distinctio!</p>
+                        <a href=""><i class="bi bi-twitter text-light"></i></a>
+                        <a href=""><i class="bi bi-facebook text-light"></i></a>
+                        <a href=""><i class="bi bi-instagram text-light"></i></a>
+                        <a href=""><i class="bi bi-youtube text-light"></i></a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-6 col-lg-3">
+                <div class="card bg-dark">
+                    <div class="card-body text-center text-light">
+                        <img src="https://randomuser.me/api/portraits/women/12.jpg" class="rounded-circle mb-3"
+                            alt="">
+                        <h3 class="card-title mb-3">Sarah Doe</h3>
+                        <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id,
+                            distinctio!</p>
+                        <a href=""><i class="bi bi-twitter text-light"></i></a>
+                        <a href=""><i class="bi bi-facebook text-light"></i></a>
+                        <a href=""><i class="bi bi-instagram text-light"></i></a>
+                        <a href=""><i class="bi bi-youtube text-light"></i></a>
+                    </div>
+                </div></div>
+            </div>
+</section>
 
 
 
@@ -122,6 +195,20 @@
             <li class="list-inline-item">Instagram</li>
         </ul>
 </footer>
+
+
+
+<!-- Optional JavaScript -->
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+    crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+    crossorigin="anonymous"></script>
+
+</body>
+
+</html>
 
 
 
