--- a/Contact.html
+++ b/Contact.html
@@ -62,25 +62,74 @@
 <!-- end of navbar -->
 
 
-<section class="text-light p-5 p-lg-0 pt-lg-5 text-center text-lg-left " id="sec4">
-    <div class="container pt-5">
-        <div class="d-sm-flex d-sm-block">
-            <div>
-                <h2 class="carh2 display-5 text-center text-lg-left ">About <span
-                        class="text-warning">Us</span></h2>
-                <p class="lead my-4 text-center text-lg-left ">Lorem ipsum, dolor sit <br> consectetur
-                    adipisicing elit. Voluptatem illum
-                    nisi
-                    voluptates, <br>hic
-                    illo voluptatibus accusamus, corrupti voluptate libero accusantium incidunt fuga repellat,                    
-                </p>
-                <button class="btn btn-primary btn-lg text-center text-lg-left">Click To Contact Us
-                </button>
-            </div>
-            <img class="img-fluid w-50 d-sm-block" src="image/wash-machine.png`" alt="">
-        </div>
+<!-- about section -->
+
+<section class="text-light  p-5  pt-lg-5 bg-primary"id="abtsec">
+</div>
+<div class="container text-center text-lg-left mt-lg-5 d-sm-flex ">
+    <div>
+        <span class=" text-warning display-3">Contact Us</span>
+        <h3 class=" display-5">LEARN MORE ABOUT WHO WE ARE
+        </h3>
+        <p class="lead my-4">Beciegast nveriti vitaesaert asety kertya aset
+            aplicaboserde nerorem asipsumod
+            itaut. Monsequntur magni dolores eonqui ratione voluptate msequise kertyias nesciunt, neque
+            porro quisquam seridolore nuyfasas. Vertyu erauas aitaesa ertyasneo eniptaiades.
+
+        </p>
+        <button class="btn btn-warning fw-bold btn-lg">CLICK TO CONTACT US
+        </button>
     </div>
-</section>
+    <img class="img-fluid d-sm-flex w-50 mt-4" src="image/Onlim-Chatbot-Conversation.png" alt="beer">
+</div></section>
+
+ <!-- Question Accordion -->
+
+ <div class="accordion p-5 bg-primary" id="FAQaccordion">
+    <div class="card p-3"id="cardaccordion">
+      <div class="card-header" id="headingOne">
+        <h2 class="mb-0">
+          <button class="btn btn-link btn-block text-left" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+            Collapsible Group Item #1
+          </button>
+        </h2>
+      </div>
+  
+      <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#FAQaccordion">
+        <div class="card-body">
+          Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+        </div>
+      </div>
+    </div>
+    <div class="card p-3"id="cardaccordion">
+      <div class="card-header" id="headingTwo">
+        <h2 class="mb-0">
+          <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+            Collapsible Group Item #2
+          </button>
+        </h2>
+      </div>
+      <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#FAQaccordion">
+        <div class="card-body">
+          Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+        </div>
+      </div>
+    </div>
+    <div class="card p-3"id="cardaccordion">
+      <div class="card-header" id="headingThree">
+        <h2 class="mb-0">
+          <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+            Collapsible Group Item #3
+          </button>
+        </h2>
+      </div>
+      <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#FAQaccordion">
+        <div class="card-body">
+          Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+        </div>
+      </div>
+    </div>
+  </div>
 
 
 
