--- a/Services.html
+++ b/Services.html
@@ -63,25 +63,114 @@
 <!-- end of navbar --> 
 
 
-<section class="text-light p-5 p-lg-0 pt-lg-5 text-center text-lg-left " id="sec4">
-    <div class="container pt-5">
+<section class="text-light p-5 p-lg-0 pt-lg-5 text-center text-lg-left " id="services">
+    <div class="container pt-5 mt-lg-4">
         <div class="d-sm-flex d-sm-block">
             <div>
-                <h2 class="carh2 display-5 text-center text-lg-left ">About <span
-                        class="text-warning">Us</span></h2>
+                <h2 class="carh2 display-5 text-center text-lg-left ">Our Exclusive <span
+                        class="text-warning">Services</span></h2>
                 <p class="lead my-4 text-center text-lg-left ">Lorem ipsum, dolor sit <br> consectetur
                     adipisicing elit. Voluptatem illum
                     nisi
                     voluptates, <br>hic
                     illo voluptatibus accusamus, corrupti voluptate libero accusantium incidunt fuga repellat,                    
+                    illo voluptatibus accusamus, corrupti voluptate libero accusantium incidunt fuga repellat,                    
+                    illo voluptatibus accusamus, corrupti voluptate libero accusantium incidunt fuga repellat,                    
                 </p>
-                <button class="btn btn-primary btn-lg text-center text-lg-left">Click To Contact Us
+                <button class="btn btn-primary btn-lg text-center text-lg-left">Click To Contact Us For More Details
                 </button>
             </div>
-            <img class="img-fluid w-50 d-sm-block" src="image/wash-machine.png`" alt="">
+            <img class="img-fluid d-sm-flex w-50 mt-md-4" src="image/chatbot-app.png" alt="beer">
         </div>
-    </div>
+<br><br><br>
+
+
+<!-- services we render-->
+
+    <div class="container">
+        <h2 class="text-center text-white">Top Notch Services Just For You
+           </h2>
+        <p class="lead text-center text-white mb-5">
+            Enjoy Discounted Rates When You <u>Order Our Services Today</u></p>
+        <div class="row g-3 d-flex  "id="contactrow">
+            <div class="col-md-6 col-lg-3">
+                <div class="card"id="servicescard">
+                    <div class="card-body text-center text-light">
+                        <img src="image/Autowaesche_Shutterstock_Nejon-Photo-1024x683.jpg" class="rounded-circle mb-3 w-100"
+                            alt="">
+                        <h3 class="card-title mb-4">Car Wash</h3>
+                        <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id,
+                            distinctio!</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-6 col-lg-3">
+                <div class="card"id="servicescard">
+                    <div class="card-body text-center text-light">
+                        <img src="image/food-png-2968.png" class="rounded-circle mb-3 w-100 bg-light"
+                            alt="">
+                        <h3 class="card-title mb-4">Hot Delicasies</h3>
+                        <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id,
+                            distinctio!</p>
+                        </div>
+                </div>
+            </div>
+
+            <div class="col-md-6 col-lg-3">
+                <div class="card"id="servicescard">
+                    <div class="card-body text-center text-light">
+                        <img src="image/barber.png" class="rounded-circle mb-3 w-100"
+                            alt="">
+                        <h3 class="card-title mb-4">Barbing Saloon</h3>
+                        <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id,
+                            distinctio!</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- row2 -->
+        <br><br>
+        <div class="row g-3 d-flex  "id="contactrow">
+            <div class="col-md-6 col-lg-3">
+                <div class="card"id="servicescard">
+                    <div class="card-body text-center text-light">
+                        <img src="image/barbecue.png" class="rounded-circle mb-3 w-100"
+                            alt="">
+                        <h3 class="card-title mb-4">Barbecue Chops</h3>
+                        <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id,
+                            distinctio!</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-6 col-lg-3">
+                <div class="card"id="servicescard">
+                    <div class="card-body text-center text-light">
+                        <img src="image/snooker.jpeg" class="rounded-circle mb-3 w-100 bg-light"
+                            alt="">
+                        <h3 class="card-title mb-4">Snooker Pool</h3>
+                        <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id,
+                            distinctio!</p>
+                        </div>
+                </div>
+            </div>
+
+            <div class="col-md-6 col-lg-3">
+                <div class="card"id="servicescard">
+                    <div class="card-body text-center text-light">
+                        <img src="image/sport bar.webp" class="rounded-circle mb-3 w-100"
+                            alt="">
+                        <h3 class="card-title mb-4">Sport Bar</h3>
+                        <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id,
+                            distinctio!</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <br>
 </section>
+
 
 
 
