--- a/About.html
+++ b/About.html
@@ -87,7 +87,7 @@
 <section id="" class="instructors p-5 bg-primary">
     <div class="container">
         <h2 class="text-center text-white">
-            Meet Our Teamgy
+            Meet Our Teamgygvgg
         </h2>
         <p class="lead text-center text-white mb-5">
             Our team have 4 years+ of experience in the industry
