--- a/About.html
+++ b/About.html
@@ -33,31 +33,33 @@
 
 <!-- navbar section -->
 
-<nav class="navbar navbar-expand-lg navbar-dark text-center d-flex">
-    <div class="container " id="navtop">
+<nav class="navbar navbar-expand-lg  navbar-dark py-4 fixed-top">
+    <div class="container">            
         <button class="navbar-toggler  btn-primary" type="button" data-toggle="collapse" data-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item active pt-lg-5">
-                    <a class="nav-link text-warning" href="home.html">Home <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item pt-lg-5">
-                    <a class="nav-link text-warning" href="Services.html">Services</a>
-                </li>                    
-                <a class="navbar-brand d-sm-block d-sm-none" href="home.html">
-                    <img src="image/logo.png" width="250" height="200" alt="logo" loading="lazy">
-                </a>                                                           
-                <li class="nav-item pt-lg-5">
-                    <a class="nav-link text-warning" href="Contact.html">Contact</a>
-                </li>
-                <li class="nav-item pt-lg-5">
-                    <a class="nav-link text-warning" href="About.html">About</a>
-                </li>
-            </ul>
-         </div>
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    
+      <ul class="navbar-nav ">
+        <a class="navbar-brand" href="home.html"><u>BMarKZ GARDEN</u>
+        </a>
+          <li class="nav-item "id="navlist">
+              <a class="nav-link" aria-current="page" href="home.html">Home</a>
+          </li>
+          
+          <li class="nav-item ">
+              <a class="nav-link " href="Services.html">Services</a>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link" href="Contact.html">Contact</a>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link" href="About.html">About</a>
+          </li>
+      </ul>
+  </div>
+</div>
 </nav>
 
 <!-- end of navbar -->
