--- a/home.html
+++ b/home.html
@@ -7,8 +7,8 @@
     <title>Bmarkz Garden</title>
     <!-- bootstrap code -->
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 
 
     <!-- Google Font -->
@@ -30,32 +30,34 @@
 <body>
     <!-- navbar section -->
 
-    <nav class="navbar navbar-expand-lg navbar-dark text-center d-flex">
-        <div class="container " id="navtop">
+    <nav class="navbar navbar-expand-lg  navbar-dark py-4 fixed-top">
+        <div class="container">            
             <button class="navbar-toggler  btn-primary" type="button" data-toggle="collapse" data-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item active pt-lg-5">
-                        <a class="nav-link text-warning" href="home.html">Home <span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item pt-lg-5">
-                        <a class="nav-link text-warning" href="Services.html">Services</a>
-                    </li>                    
-                    <a class="navbar-brand d-sm-block d-sm-none" href="home.html">
-                        <img src="image/logo.png" width="250" height="200" alt="logo" loading="lazy">
-                    </a>                                                            
-                    <li class="nav-item pt-lg-5">
-                        <a class="nav-link text-warning" href="Contact.html">Contact</a>
-                    </li>
-                    <li class="nav-item pt-lg-5">
-                        <a class="nav-link text-warning" href="About.html">About</a>
-                    </li>
-                </ul>
-            </div>
-    </nav>
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        
+          <ul class="navbar-nav ">
+            <a class="navbar-brand" href="home.html"><u>BMarKZ GARDEN</u>
+            </a>
+              <li class="nav-item">
+                  <a class="nav-link" aria-current="page" href="home.html">Home</a>
+              </li>
+              
+              <li class="nav-item">
+                  <a class="nav-link " href="Services.html">Services</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="Contact.html">Contact</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="About.html">About</a>
+              </li>
+          </ul>
+      </div>
+  </div>
+</nav>
 
 
 
