--- a/Services.html
+++ b/Services.html
@@ -77,17 +77,13 @@
                     adipisicing elit. Voluptatem illum
                     nisi
                     voluptates, <br>hic
-                    illo voluptatibus accusamus, corrupti voluptate libero accusantium incidunt fuga repellat,                    
-                    illo voluptatibus accusamus, corrupti voluptate libero accusantium incidunt fuga repellat,                    
-                    illo voluptatibus accusamus, corrupti voluptate libero accusantium incidunt fuga repellat,                    
-                </p>
+                    illo voluptatibus accusamus, corrupti voluptate libero accusantium incidunt fuga</p>
                 <button class="btn btn-primary btn-lg text-center text-lg-left">Click To Contact Us For More Details
                 </button>
-            </div>
+            </div> <br>
             <img class="img-fluid d-sm-flex w-50 mt-md-4" src="image/chatbot-app.png" alt="beer">
         </div>
 <br><br><br>
-
 
 <!-- services we render-->
 
