--- a/About.html
+++ b/About.html
@@ -66,24 +66,23 @@
 
 <!-- about section -->
 
-<section class="text-light  p-5  pt-lg-5 bg-primary"id="abtsec">
-</div>
-<div class="container text-center text-lg-left  d-sm-flex mt-lg-5">
-    <div>
-        <span class=" text-warning display-4 "><b>About Us</b></span>
-        <h2 class=" display-5">LEARN MORE ABOUT WHO WE ARE
-        </h2>
-        <p class="lead my-4">Beciegast nveriti vitaesaert asety kertya aset
-            aplicaboserde nerorem asipsumod
-            itaut. Monsequntur magni dolores eonqui ratione voluptate msequise kertyias nesciunt, neque
-            porro quisquam seridolore nuyfasas. Vertyu erauas aitaesa ertyasneo eniptaiades.
-
-        </p>
-        <button class="btn btn-warning fw-bold btn-lg">CHECK OUT OUR SERVICES
-        </button>
-    </div>
-    <img class="img-fluid d-sm-flex w-100 mt-4" src="image/about-removebg-preview.png" alt="about">
-</div></section>
+<section class="text-light p-5 p-lg-0 pt-lg-5 text-center text-lg-left bg-primary">
+    <div class="container pt-5 mt-lg-4">
+        <div class="d-sm-flex d-sm-block">
+            <div>
+                <h2 class="carh2 display-5 text-center text-lg-left ">Learn More <span
+                        class="text-warning">About Us</span></h2>
+                <p class="lead my-4 text-center text-lg-left ">Lorem ipsum, dolor sit <br> consectetur
+                    adipisicing elit. Voluptatem illum
+                    nisi
+                    voluptates, <br>hic
+                    illo voluptatibus accusamus, corrupti voluptate libero accusantium incidunt fuga</p>
+                <button class="btn btn-warning btn-lg text-center text-lg-left">Click To Contact Us For More Details
+                </button>
+            </div> <br>
+            <img class="img-fluid d-sm-flex w-50 mt-md-4" src="image/Onlim-Chatbot-Conversation.png" alt="beer">
+        </div>
+  <br><br><br>
 
 <!-- staffs-->
 <section id="" class="instructors p-5 bg-primary">
