--- a/About.html
+++ b/About.html
@@ -161,7 +161,59 @@
 
 
 
-<!-- footer -->
+<!-- newsletter -->
+
+<section class="bg-primary text-light p-5">
+    <div class="container">
+        <div class="d-md-flex justify-content-between align-items-center ">
+            <h3 class=" mb-md-0 text-center text-lg-left pb-3">Sign Up For Our Newsletter</h3>
+            <div class="input-group news-input">
+                <input type="text" class="form-control" placeholder="Enter Email" id="form">
+                <button class="btn btn-dark">Button</button>
+            </div>
+        </div>
+    </div>
+</section>
+
+<!-- Contact and map -->
+
+<section class="p-5 bg-primary d-sm-flex">
+    <div class="conatiner">
+        <div class="row g-4 p-5">
+            <div class="col-md">
+                <h2 class="text-center text-lg-left ml-3 mb-4 text-white">
+                    Contact Info
+                </h2>
+                <ul class="list-group list-group-flush lead">
+                    <li class="list-group-item bg-transparent  text-white text-sm-center text-lg-left">
+                        <span class="fw-bold"><b>Main Location;</b></span> Opposite Bazeno
+                        Plaza By Iwofe Road
+                        Rumuolumeni Port Harcourt
+                    </li>
+                </ul>
+                <ul class="list-group list-group-flush lead">
+                    <li class="list-group-item bg-transparent text-center text-lg-left text-white">
+                        <span class="fw-bold"><b>Working Days;</b></span> Monday - Sunday
+                    </li>
+                </ul>
+                <ul class="list-group list-group-flush lead">
+                    <li class="list-group-item bg-transparent  text-white text-center text-lg-left">
+                        <span class="fw-bold"><b>Working Hours;</b></span> 7 AM - 11 PM
+                    </li>
+                </ul>
+            </div>
+            <div class="col-md pt-5">
+                <div id="map">
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3975.83861575818!2d6.951379814446736!3d4.797742742145114!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1069cf5495df9cf5%3A0x7f277b58b3e802a0!2sBazeno%20plaza!5e0!3m2!1sen!2sng!4v1676288113825!5m2!1sen!2sng"
+                        width="100%" height="100%" style="border:10px;" allowfullscreen="" loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+            </div>
+        </div>
+    </div>
+    </div>
+</section>
 
 <footer class="footer p-5 text-white text-center d-flex">
     <div class="container">
@@ -196,8 +248,6 @@
             <li class="list-inline-item">Instagram</li>
         </ul>
 </footer>
-
-
 
 <!-- Optional JavaScript -->
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
