--- a/Contact.html
+++ b/Contact.html
@@ -128,44 +128,98 @@ Lorem ipsum dolor sit, amet consectetur adipisicing elit. Impedit, dolore distin
       </div>
     </div>
   </div>
+ </div></div></section>
 
 
 
+ <!-- newsletter -->
 
-<!-- footer -->
+
+ <section class="bg-primary text-light p-5">
+  <div class="container">
+      <div class="d-md-flex justify-content-between align-items-center ">
+          <h3 class=" mb-md-0 text-center text-lg-left pb-3">Sign Up For Our Newsletter</h3>
+          <div class="input-group news-input">
+              <input type="text" class="form-control" placeholder="Enter Email" id="form">
+              <button class="btn btn-dark">Button</button>
+          </div>
+
+      </div>
+  </div>
+</section>
+
+<!-- Contact and map -->
+
+<section class="p-5 bg-primary d-sm-flex">
+  <div class="conatiner">
+      <div class="row g-4 p-5">
+          <div class="col-md">
+              <h2 class="text-center text-lg-left ml-3 mb-4 text-white">
+                  Contact Info
+              </h2>
+              <ul class="list-group list-group-flush lead">
+                  <li class="list-group-item bg-transparent  text-white text-sm-center text-lg-left">
+                      <span class="fw-bold"><b>Main Location;</b></span> Opposite Bazeno
+                      Plaza By Iwofe Road
+                      Rumuolumeni Port Harcourt
+                  </li>
+              </ul>
+              <ul class="list-group list-group-flush lead">
+                  <li class="list-group-item bg-transparent text-center text-lg-left text-white">
+                      <span class="fw-bold"><b>Working Days;</b></span> Monday - Sunday
+                  </li>
+              </ul>
+              <ul class="list-group list-group-flush lead">
+                  <li class="list-group-item bg-transparent  text-white text-center text-lg-left">
+                      <span class="fw-bold"><b>Working Hours;</b></span> 7 AM - 11 PM
+                  </li>
+              </ul>
+          </div>
+          <div class="col-md pt-5">
+              <div id="map">
+                  <iframe
+                      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3975.83861575818!2d6.951379814446736!3d4.797742742145114!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1069cf5495df9cf5%3A0x7f277b58b3e802a0!2sBazeno%20plaza!5e0!3m2!1sen!2sng!4v1676288113825!5m2!1sen!2sng"
+                      width="100%" height="100%" style="border:10px;" allowfullscreen="" loading="lazy"
+                      referrerpolicy="no-referrer-when-downgrade"></iframe>
+              </div>
+          </div>
+      </div>
+  </div>
+  </div>
+</section>
 
 <footer class="footer p-5 text-white text-center d-flex">
-    <div class="container">
-        <h2 class="display-6">ADD ANY EXTRA INFORMATION INSIDE THE FOOTER AREA</h2>
-        <a class="navbar-brand d-sm-block d-sm-none" href="#">
-            <img src="image/logo.png" width="250" height="200" alt="logo" loading="lazy">
-        </a>
-        <div class="row g-3">
-            <div class="col-md">
-                <h2 class="text-center mb-1">
-                    Call us
-                </h2>
-                <p>+01 315 0006 565</p>
-            </div>
-            <div class="col-md">
-                <h2 class="text-center mb-1">
-                    Address</h2>
-                <p>Canal View Socity JzStreet La 0005846 </p>
-            </div>
-            <div class="col-md">
-                <h2 class="text-center mb-1">
-                    Email</h2>
-                <p>support@jzpub.com</p>
-            </div>
-        </div><br>
-        <p>Precious Pub © 2023 All Rights Reserved <a href="#">Terms of Use</a> And <a href="http://#">Privacy
-                Policy</a>
-        </p>
-        <ul class="list-inline">
-            <li class="list-inline-item">Facebook</li>
-            <li class="list-inline-item">Twitter</li>
-            <li class="list-inline-item">Instagram</li>
-        </ul>
+  <div class="container">
+      <h2 class="display-6">ADD ANY EXTRA INFORMATION INSIDE THE FOOTER AREA</h2>
+      <a class="navbar-brand d-sm-block d-sm-none" href="#">
+          <img src="image/logo.png" width="250" height="200" alt="logo" loading="lazy">
+      </a>
+      <div class="row g-3">
+          <div class="col-md">
+              <h2 class="text-center mb-1">
+                  Call us
+              </h2>
+              <p>+01 315 0006 565</p>
+          </div>
+          <div class="col-md">
+              <h2 class="text-center mb-1">
+                  Address</h2>
+              <p>Canal View Socity JzStreet La 0005846 </p>
+          </div>
+          <div class="col-md">
+              <h2 class="text-center mb-1">
+                  Email</h2>
+              <p>support@jzpub.com</p>
+          </div>
+      </div><br>
+      <p>Precious Pub © 2023 All Rights Reserved <a href="#">Terms of Use</a> And <a href="http://#">Privacy
+              Policy</a>
+      </p>
+      <ul class="list-inline">
+          <li class="list-inline-item">Facebook</li>
+          <li class="list-inline-item">Twitter</li>
+          <li class="list-inline-item">Instagram</li>
+      </ul>
 </footer>
 
 
