--- a/Contact.html
+++ b/Contact.html
@@ -67,8 +67,8 @@
 
 <!-- contact section -->
 
-<section class="text-light p-5 p-lg-0 pt-lg-5 text-center text-lg-left bg-primary">
-  <div class="container pt-5 mt-lg-4">
+<section class="text-light p-5 text-center text-lg-left bg-primary">
+  <div class="container pt-5 mt-5">
       <div class="d-sm-flex d-sm-block">
           <div>
               <h2 class="carh2 display-5 text-center text-lg-left ">Contact <span
@@ -87,7 +87,7 @@
 
  <!-- Question Accordion -->
 
- <div class="accordion" id="accordionExample">
+ <div class="accordion" id="cardaccordion">
   <div class="card">
     <div class="card-header" id="headingOne">
       <h2 class="mb-0">
@@ -97,8 +97,8 @@
       </h2>
     </div>
 
-    <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
-      <div class="card-body">
+    <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#cardaccordion">
+      <div class="card-body text-dark">
         Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
       </div>
     </div>
@@ -111,8 +111,8 @@
         </button>
       </h2>
     </div>
-    <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
-      <div class="card-body">
+    <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#cardaccordion">
+      <div class="card-body text-dark">
         Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
       </div>
     </div>
@@ -125,38 +125,28 @@
         </button>
       </h2>
     </div>
-    <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
-      <div class="card-body">
+    <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#cardaccordion">
+      <div class="card-body text-dark">
         Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
       </div>
     </div>
-  </div>
-</div>
+  </div></div>
 
 <!-- Question accordion end -->
 
 
  <!-- newsletter -->
-
-
- <section class="bg-primary text-light p-5">
-  <div class="container">
-      <div class="d-md-flex justify-content-between align-items-center ">
-          <h3 class=" mb-md-0 text-center text-lg-left pb-3">Sign Up For Our Newsletter</h3>
-          <div class="input-group news-input">
-              <input type="text" class="form-control" placeholder="Enter Email" id="form">
-              <button class="btn btn-dark">Button</button>
-          </div>
-
+ <br><br>
+  <div class="container p-lg-0">
+    <div class="d-md-flex justify-content-between align-items-center">
+      <h3 class=" mb-md-0 text-sm-center text-lg-right pb-3 ">Sign Up For Our Newsletter</h3>
+      <div class="input-group news-input">
+          <input type="text" class="form-control" placeholder="Enter Email" id="form">
+          <button class="btn btn-primary">Button</button>
       </div>
   </div>
-</section>
-
-<!-- Contact and map -->
-
-<section class="p-5 bg-primary d-sm-flex">
-  <div class="conatiner">
-      <div class="row g-4 p-5">
+  <!-- contact -->
+      <div class=" p-lg-0">
           <div class="col-md">
               <h2 class="text-center text-lg-left ml-3 mb-4 text-white">
                   Contact Info
@@ -179,6 +169,7 @@
                   </li>
               </ul>
           </div>
+          <!-- map -->
           <div class="col-md pt-5">
               <div id="map">
                   <iframe
