--- a/Contact.html
+++ b/Contact.html
@@ -144,7 +144,7 @@
           <input type="text" class="form-control" placeholder="Enter Email" id="form">
           <button class="btn btn-primary">Button</button>
       </div>
-  </div>
+  </div><br>
   <!-- contact -->
       <div class=" p-lg-0">
           <div class="col-md">
