--- a/Contact.html
+++ b/Contact.html
@@ -67,9 +67,9 @@
 
 <!-- contact section -->
 
-<section class="text-light p-5 text-center text-lg-left bg-primary">
-  <div class="container pt-5 mt-5">
-      <div class="d-sm-flex d-sm-block">
+<section class="text-light mt-5 text-center text-lg-left bg-primary">
+  <div class="container pt-5 mt-5 pb-3">
+      <div class="d-sm-flex d-sm-block pt-5 ">
           <div>
               <h2 class="carh2 display-5 text-center text-lg-left ">Contact <span
                       class="text-warning">Us</span></h2>
@@ -187,10 +187,9 @@
 
 <footer class="footer p-5 text-white text-center d-flex">
   <div class="container">
-      <h2 class="display-6">ADD ANY EXTRA INFORMATION INSIDE THE FOOTER AREA</h2>
-      <a class="navbar-brand d-sm-block d-sm-none" href="#">
-          <img src="image/logo.png" width="250" height="200" alt="logo" loading="lazy">
-      </a>
+      <h2 class="display-6 text-light">ADD ANY EXTRA INFORMATION INSIDE THE FOOTER AREA</h2>
+      <a class="navbar-brand" href="home.html"><u>BMarKZ GARDEN</u>
+      </a> 
       <div class="row g-3">
           <div class="col-md">
               <h2 class="text-center mb-1">
