--- a/Services.html
+++ b/Services.html
@@ -178,7 +178,8 @@
 <!-- footer -->
 
 <footer class="footer p-5 text-white text-center d-flex">
-    <div class="container">
+    <div class="container">]
+        
         <h2 class="display-6">ADD ANY EXTRA INFORMATION INSIDE THE FOOTER AREA</h2>
         <a class="navbar-brand d-sm-block d-sm-none" href="#">
             <img src="image/logo.png" width="250" height="200" alt="logo" loading="lazy">
