--- a/Contact.html
+++ b/Contact.html
@@ -78,10 +78,12 @@
                   nisi
                   voluptates, <br>hic
                   illo voluptatibus accusamus, corrupti voluptate libero accusantium incidunt fuga</p>
-              <button class="btn btn-warning btn-lg text-center text-lg-left">Click To Contact Us For More Details
+              <button class="btn btn-warning  mr-4 btn-lg text-center text-lg-left">Contact Us For More Details
               </button>
           </div> <br>
-          <img class="img-fluid d-sm-flex w-50 mt-md-4" src="image/Onlim-Chatbot-Conversation.png" alt="beer">
+          <img class="img-fluid d-none d-lg-flex w-50 mt-md-4" src="image/Onlim-Chatbot-Conversation.png" alt="beer">
+      </div>
+          <img class="img-fluid d-sm-none w-100 mt-md-4" src="image/Onlim-Chatbot-Conversation.png" alt="beer">
       </div>
 <br><br><br>
 
@@ -142,7 +144,7 @@
       <h3 class=" mb-md-0 text-sm-center text-lg-right pb-3 ">Sign Up For Our Newsletter</h3>
       <div class="input-group news-input">
           <input type="text" class="form-control" placeholder="Enter Email" id="form">
-          <button class="btn btn-primary">Button</button>
+          <button class="btn btn-primary">REGISTER </button>
       </div>
   </div><br>
   <!-- contact -->
@@ -185,26 +187,26 @@
 
 <!-- footer -->
 
-<footer class="footer p-5 text-white text-center d-flex">
-  <div class="container">
-      <h2 class="display-6 text-light">ADD ANY EXTRA INFORMATION INSIDE THE FOOTER AREA</h2>
+<footer class="footer text-white text-center d-flex">
+  <div class="container pt-5">
+      <h4 class="display-6 text-light">ADD ANY EXTRA INFORMATION INSIDE THE FOOTER AREA</h4>
       <a class="navbar-brand" href="home.html"><u>BMarKZ GARDEN</u>
       </a> 
       <div class="row g-3">
           <div class="col-md">
-              <h2 class="text-center mb-1">
+              <h4 class="text-center mb-1 display-5">
                   Call us
-              </h2>
+              </h4>
               <p>+01 315 0006 565</p>
           </div>
           <div class="col-md">
-              <h2 class="text-center mb-1">
-                  Address</h2>
+              <h4 class="text-center mb-1 display-5">
+                  Address</h4>
               <p>Canal View Socity JzStreet La 0005846 </p>
           </div>
           <div class="col-md">
-              <h2 class="text-center mb-1">
-                  Email</h2>
+              <h4 class="text-center mb-1 display-5">
+                  Email</h4>
               <p>support@jzpub.com</p>
           </div>
       </div><br>
