--- a/Contact.html
+++ b/Contact.html
@@ -161,12 +161,12 @@
                   </li>
               </ul>
               <ul class="list-group list-group-flush lead">
-                  <li class="list-group-item bg-transparent text-center text-lg-left text-white">
+                  <li class="list-group-item  bg-transparent  text-white text-sm-center text-lg-left">
                       <span class="fw-bold"><b>Working Days;</b></span> Monday - Sunday
                   </li>
               </ul>
               <ul class="list-group list-group-flush lead">
-                  <li class="list-group-item bg-transparent  text-white text-center text-lg-left">
+                  <li class="list-group-item  bg-transparent  text-white text-sm-center text-lg-left">
                       <span class="fw-bold"><b>Working Hours;</b></span> 7 AM - 11 PM
                   </li>
               </ul>
